--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,20 @@
 [project]
-name = "procedural-human-blender"
+name = "procedural-human"
 version = "1.0.0"
 description = "Procedural Human Generator for Blender - Create realistic human models using Geometry Nodes"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 authors = [
-    {name = "Procedural Human Team", email = "info@proceduralhuman.dev"},
+    { name = "Procedural Human Team", email = "info@proceduralhuman.dev" },
 ]
-keywords = ["blender", "3d", "procedural", "human", "geometry-nodes", "modeling"]
+keywords = [
+    "blender",
+    "3d",
+    "procedural",
+    "human",
+    "geometry-nodes",
+    "modeling",
+]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -21,15 +28,12 @@ classifiers = [
     "Topic :: Multimedia :: Graphics :: 3D Modeling",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
-dependencies = []
-# Note: mathutils and bpy are provided by Blender runtime
-
-[project.optional-dependencies]
-dev = [
+dependencies = [
     "pytest>=7.0.0",
     "black>=22.0.0",
     "flake8>=4.0.0",
     "mypy>=0.950",
+    "fake-bpy-module>=20251003",
 ]
 
 [project.urls]
@@ -45,7 +49,7 @@ build-backend = "hatchling.build"
 
 [tool.black]
 line-length = 88
-target-version = ['py310']
+target-version = ['py311']
 include = '\.pyi?$'
 extend-exclude = '''
 /(
@@ -62,7 +66,7 @@ extend-exclude = '''
 '''
 
 [tool.mypy]
-python_version = "3.10"
+python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
