--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ dependencies = [
     "flake8>=4.0.0",
     "mypy>=0.950",
     "fake-bpy-module>=20251003",
+    "tree-sitter>=0.20.0",
+    "tree-sitter-python>=0.20.0",
 ]
 
 [project.urls]
