--- a/procedural_human/blender_manifest.toml
+++ b/procedural_human/blender_manifest.toml
@@ -22,6 +22,7 @@ platforms = ["windows-x64", "linux-x64"]
 # Python wheel dependencies
 # These are bundled with the extension and automatically installed by Blender
 wheels = [
+    "./wheels/anyio-4.12.0-py3-none-any.whl",
     "./wheels/black-25.12.0-cp311-cp311-win_amd64.whl",
     "./wheels/certifi-2025.11.12-py3-none-any.whl",
     "./wheels/charset_normalizer-3.4.4-cp311-cp311-win_amd64.whl",
@@ -32,22 +33,25 @@ wheels = [
     "./wheels/flake8-7.3.0-py2.py3-none-any.whl",
     "./wheels/fsspec-2025.12.0-py3-none-any.whl",
     "./wheels/ftfy-6.1.1-py3-none-any.whl",
-    "./wheels/huggingface_hub-0.36.0-py3-none-any.whl",
+    "./wheels/h11-0.16.0-py3-none-any.whl",
+    "./wheels/hf_xet-1.2.0-cp37-abi3-win_amd64.whl",
+    "./wheels/httpcore-1.0.9-py3-none-any.whl",
+    "./wheels/httpx-0.28.1-py3-none-any.whl",
+    "./wheels/huggingface_hub-1.2.3-py3-none-any.whl",
     "./wheels/idna-3.11-py3-none-any.whl",
     "./wheels/imageio-2.37.2-py3-none-any.whl",
     "./wheels/iniconfig-2.3.0-py3-none-any.whl",
     "./wheels/iopath-0.1.9-py3-none-any.whl",
     "./wheels/jinja2-3.1.6-py3-none-any.whl",
     "./wheels/lazy_loader-0.4-py3-none-any.whl",
-    "./wheels/librt-0.7.5-cp311-cp311-win_amd64.whl",
+    "./wheels/librt-0.7.6-cp311-cp311-win_amd64.whl",
     "./wheels/markupsafe-3.0.3-cp311-cp311-win_amd64.whl",
     "./wheels/mccabe-0.7.0-py2.py3-none-any.whl",
     "./wheels/mpmath-1.3.0-py3-none-any.whl",
     "./wheels/mypy_extensions-1.1.0-py3-none-any.whl",
     "./wheels/mypy-1.19.1-cp311-cp311-win_amd64.whl",
     "./wheels/networkx-3.6.1-py3-none-any.whl",
-    "./wheels/numpy-1.26.4-cp311-cp311-win_amd64.whl",
-    "./wheels/opencv_python-4.11.0.86-cp37-abi3-win_amd64.whl",
+    "./wheels/opencv_python-4.12.0.88-cp37-abi3-win_amd64.whl",
     "./wheels/packaging-25.0-py3-none-any.whl",
     "./wheels/pathspec-0.12.1-py3-none-any.whl",
     "./wheels/pillow-12.0.0-cp311-cp311-win_amd64.whl",
@@ -67,16 +71,17 @@ wheels = [
     "./wheels/scikit_image-0.26.0-cp311-cp311-win_amd64.whl",
     "./wheels/scipy-1.16.3-cp311-cp311-win_amd64.whl",
     "./wheels/setuptools-80.9.0-py3-none-any.whl",
-    "./wheels/sympy-1.14.0-py3-none-any.whl",
+    "./wheels/shellingham-1.5.4-py2.py3-none-any.whl",
+    "./wheels/sympy-1.13.1-py3-none-any.whl",
     "./wheels/tifffile-2025.12.20-py3-none-any.whl",
     "./wheels/timm-1.0.22-py3-none-any.whl",
     "./wheels/tokenizers-0.22.1-cp39-abi3-win_amd64.whl",
-    "./wheels/torch-2.9.1-cp311-cp311-win_amd64.whl",
-    "./wheels/torchvision-0.24.1-cp311-cp311-win_amd64.whl",
+    "./wheels/torch-2.6.0+cu124-cp311-cp311-win_amd64.whl",
+    "./wheels/torchvision-0.21.0+cu124-cp311-cp311-win_amd64.whl",
     "./wheels/tqdm-4.67.1-py3-none-any.whl",
-    "./wheels/transformers-4.57.3-py3-none-any.whl",
     "./wheels/tree_sitter_python-0.25.0-cp310-abi3-win_amd64.whl",
     "./wheels/tree_sitter-0.25.2-cp311-cp311-win_amd64.whl",
+    "./wheels/typer_slim-0.21.0-py3-none-any.whl",
     "./wheels/typing_extensions-4.15.0-py3-none-any.whl",
     "./wheels/urllib3-2.6.2-py3-none-any.whl",
     "./wheels/wcwidth-0.2.14-py2.py3-none-any.whl"
