--- a/procedural_human/pyproject.toml
+++ b/procedural_human/pyproject.toml
@@ -38,11 +38,10 @@ dependencies = [
     "filemover @ git+https://github.com/plex1/filemover",
     
     # SAM3 core dependencies
-    "torch>=2.0.0",
-    "torchvision>=0.15.0",
-    "transformers>=4.35.0",
+    "torch @ https://download.pytorch.org/whl/cu124/torch-2.6.0%2Bcu124-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
+    "torchvision @ https://download.pytorch.org/whl/cu124/torchvision-0.21.0%2Bcu124-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
+    "transformers @ git+https://github.com/huggingface/transformers.git",
     "timm>=1.0.17",
-    "numpy>=1.26,<2",
     "tqdm",
     "ftfy==6.1.1",
     "regex",
