--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,11 @@ htmlcov/
 *.safetensors
 *.pt
 *.ckpt
+
+# Hunyuan3D-2 submodule artifacts (venv and downloaded models)
+procedural_human/novel_view_gen/Hunyuan3D-2/.venv/
+procedural_human/novel_view_gen/Hunyuan3D-2/weights/
+procedural_human/novel_view_gen/Hunyuan3D-2/*.egg-info/
+procedural_human/novel_view_gen/Hunyuan3D-2/build/
+
+procedural_human/novel_view_gen/weights/
