node export refactor

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "procedural_human/novel_view_gen/Hunyuan3D-2"]
 	path = procedural_human/novel_view_gen/Hunyuan3D-2
 	url = https://github.com/Tencent-Hunyuan/Hunyuan3D-2.git
+[submodule "ixdar-tickets"]
+	path = ixdar-tickets
+	url = https://github.com/MasterOfMastersDestoyerOfWorlds/ixdar-tickets.git
