--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ procedural_human/novel_view_gen/Hunyuan3D-2/build/
 
 procedural_human/novel_view_gen/weights/
 tmp/.blender_pid
+.blender-cli-state.json
